[tool.poetry]
name = "nt-exporters"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
sqlmodel = "^0.0.22"
fastapi = "^0.114.0"
pydantic = "^2.9.0"
uvicorn = "^0.30.6"
aiohttp = "^3.10.5"
prometheus-client = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
